syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "CadastraChavePixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service cadastraChavePixGrpc {
  rpc cadastrar (PixRequest) returns (PixResponse) {}
}
enum TiposConta{
  CONTA_NAO_DECLARADO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  CHAVE_NAO_DECLARADO = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  CHAVE_ALEATRORIA = 4;
}

message PixRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TiposConta tiposConta = 4;
}

message PixResponse {
  string clietId = 1;
}